# memory-aware-rag

./: .gitignore  evaluate_metrics.py  main.py  run_experiment.py
experiments/bm25_message_rerank_top50_k3/report/: report_k3.txt
experiments/bm25_message_rerank_top50_k4/report/: report_k4.txt
experiments/bm25_top5_message_g/report/: report_k5.txt
experiments/metrics/: bm25_top5_report.txt
experiments/retrieval_results/bm25_top5/: 001be529.json  00ca467f.json  0100672e.json  01493427.json  (+496 more)
research-phase/: .gitignore  README.md  build_vector_index.py  evaluate_metrics.py  find_optimal_threshold.py  generate_qwen.py  main.py  main_retrieval.py  pyproject.toml  run_remaining_experiments.sh  test_qwen.py
research-phase/experiments/BM25_Message_Granularity_TopK/bm25_top3_message_g/report/: report_k3.txt
research-phase/experiments/BM25_Message_Granularity_TopK/bm25_top4_message_g/report/: report_k4.txt
research-phase/experiments/BM25_Message_Rerank_TopK/bm25_message_rerank_top50_k3/report/: report_k3_mrr.txt
research-phase/experiments/BM25_Message_Rerank_TopK/bm25_message_rerank_top50_k4/report/: report_k4_mrr.txt  report_k4_thresh4.5.txt
research-phase/experiments/BM25_Message_Rerank_TopK/bm25_message_rerank_top50_k5/report/: report_k5.txt  report_k5_mrr.txt  report_k5_thresh4.5.txt
research-phase/experiments/BM25_Session_Granularity_TopK/bm25_top3/report/: report_k3.txt
research-phase/experiments/hybrid_search_k4_thresh6.0/report/: report_k4.txt
research-phase/scripts/: download_data.py  download_model.py
src/datasets/: LongMemEvalDataset.py
(+3 files in other folders)
